# pubsub

./: .gitignore  README.md
launch/: inter_process_pubsub.launch.py  intra_process_pubsub.launch.py
script/: draw.sh
src/comm/: CMakeLists.txt  package.xml
src/comm/include/comm/: pub.hpp  sub.hpp
src/comm/launch/: inter_process_pubsub.launch.py  intra_process_pubsub.launch.py
src/comm/msg/: Stamped1000KBin.msg  Stamped2MBin.msg  StampedBin.msg
src/comm/src/: pointer_passing.cpp  pub.cpp  pub_impl.cpp  pub_main.cpp  sub.cpp  sub_impl.cpp  sub_main.cpp
src/comm/srv/: PublishLoop.srv
